Update scaler to be per tag